5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1602_1015.log
== SUBMITION (2019-03-21 18:39:23) 
-- CODE:
a=int(input("Digite um numero:"))
b=int(input("Digite um numero:"))
c=int(input("Digite um numero:"))
d=max(a,b,c)
e=min(a,b,c)
f=-d-e+a+b+C
print(d)
print(f)
print(e)


-- EXECUTION TIME:
0.155228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 6, in <module>
    f=-d-e+a+b+C
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:11) 
-- CODE:
a=int(input("Digite um numero:"))
b=int(input("Digite um numero:"))
c=int(input("Digite um numero:"))
d=max(a,b,c)
e=min(a,b,c)
f=a+b+C-d+e
print(d)
print(f)
print(e)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    f=a+b+C-d+e
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:44) 
-- CODE:
a=int(input("Digite um numero:"))
b=int(input("Digite um numero:"))
c=int(input("Digite um numero:"))
d=max(a,b,c)
e=min(a,b,c)
f=a+b+c-d+e
print(d)
print(f)
print(e)


-- OUTPUT:
10
-4
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:42:00) 
-- CODE:
a=int(input("Digite um numero:"))
b=int(input("Digite um numero:"))
c=int(input("Digite um numero:"))
d=max(a,b,c)
e=min(a,b,c)
f=a+b+c-(d+e)
print(d)
print(f)
print(e)


-- EXECUTION TIME:
0.115827
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
0
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:42:28) 
-- CODE:
a=int(input("Digite um numero:"))
b=int(input("Digite um numero:"))
c=int(input("Digite um numero:"))
d=max(a,b,c)
e=min(a,b,c)
f=a+b+c-(d+e)
print(e)
print(f)
print(d)


-- EXECUTION TIME:
0.154992
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
